public/styles/docs.css
/*!
 * Bootstrap Docs (http://getbootstrap.com)
 * Copyright 2011-2016 Twitter, Inc.
 * Licensed under the Creative Commons Attribution 3.0 Unported License. For
 * details, see https://creativecommons.org/licenses/by/3.0/.
 */

/*
 * Scaffolding
 *
 * Update the basics of our documents to prep for docs content.
 */

body {
  position: relative; /* For scrollspy */
}

/* Keep code small in tables on account of limited space */
.table code {
  font-size: 13px;
  font-weight: normal;
}

/* Inline code within headings retain the heading's background-color */
h2 code,
h3 code,
h4 code {
  background-color: inherit;
}

/* Cursor */
*[data-cursor="pointer"] {
  cursor: pointer;
}

/* Outline button for use within the docs */
.btn-outline {
  color: #563d7c;
  background-color: transparent;
  border-color: #563d7c;
}
.btn-outline:hover,
.btn-outline:focus,
.btn-outline:active {
  color: #fff;
  background-color: #563d7c;
  border-color: #563d7c;
}

/* Inverted outline button (white on dark) */
.btn-outline-inverse {
  color: #fff;
  background-color: transparent;
  border-color: #cdbfe3;
}
.btn-outline-inverse:hover,
.btn-outline-inverse:focus,
.btn-outline-inverse:active {
  color: #563d7c;
  text-shadow: none;
  background-color: #fff;
  border-color: #fff;
}

/* Bootstrap "B" icon */
.bs-docs-booticon {
  display: block;
  font-weight: 500;
  color: #fff;
  text-align: center;
  cursor: default;
  background-color: #563d7c;
  border-radius: 15%;
}
.bs-docs-booticon-sm {
  width: 30px;
  height: 30px;
  font-size: 20px;
  line-height: 28px;
}
.bs-docs-booticon-lg {
  width: 144px;
  height: 144px;
  font-size: 108px;
  line-height: 140px;
}
.bs-docs-booticon-inverse {
  color: #563d7c;
  background-color: #fff;
}
.bs-docs-booticon-outline {
  background-color: transparent;
  border: 1px solid #cdbfe3;
}


/*
 * Fancy skip link
 *
 * Make it look a bit less "bare bones"
 * Also includes focus suppression for the Chrome tabindex="-1" workaround
 */

#skippy {
  display: block;
  padding: 1em;
  color: #fff;
  background-color: #6f5499;
  outline: 0;
}

#skippy .skiplink-text {
  padding: .5em;
  outline: 1px dotted;
}

#content:focus {
  outline: none;
}


/*
 * Main navigation
 *
 * Turn the `.navbar` at the top of the docs purple.
 */

.bs-docs-nav {
  margin-bottom: 0;
  background-color: #293036;
  border-bottom: 0;
}
.bs-home-nav .bs-nav-b {
  display: none;
}
.bs-docs-nav .navbar-brand,
.bs-docs-nav .navbar-nav > li > a {
  font-weight: 500;
  color: #fff;
  transition: all 0.3s;
  -moz-transition: all 0.3s;
  -webkit-transition: all 0.3s;
  -o-transition: all 0.3s;
}
.bs-docs-nav .navbar-nav > li > a:hover,
.bs-docs-nav .navbar-nav > .active > a,
.bs-docs-nav .navbar-nav > .active > a:hover {
  color: #ffc20e;
  background-color: #293036;
}
.bs-docs-nav .navbar-toggle .icon-bar {
  background-color: #fff;
}
.bs-docs-nav .navbar-header .navbar-toggle {
  border-color: #fff;
}
.bs-docs-nav .navbar-header .navbar-toggle:hover,
.bs-docs-nav .navbar-header .navbar-toggle:focus {
  background-color: #293036;
  border-color: #f9f9f9;
}


/*
 * Footer
 *
 * Separated section of content at the bottom of all pages, save the homepage.
 */

.bs-docs-footer {
  padding-top: 50px;
  padding-bottom: 50px;
  margin-top: 100px;
  color: #99979c;
  text-align: center;
  background-color: #293036;
}
.bs-docs-footer a {
  color: #fff;
}
.bs-docs-footer-links {
  padding-left: 0;
  margin-bottom: 20px;
}
.bs-docs-footer-links li {
  display: inline-block;
}
.bs-docs-footer-links li + li {
  margin-left: 15px;
}
.bs-docs-footer .container {
  position: relative;
}
.bs-docs-footer .container:after {
  background-image: url('/homer/img/homer.png');
  background-repeat: no-repeat;
  background-size: contain;
  bottom: -50px;
  content: "";
  display: block;
  height: 256px;
  position: absolute;
  right: 0;
  width: 256px;
}
.bs-docs-footer.homer-excited .container:after {
  background-image: url('/homer/img/homer-excited.png');
  height: 235px;
}
.bs-docs-footer.homer-pointing .container:after {
  background-image: url('/homer/img/homer-pointing.png');
}
.bs-docs-footer.homer-crazy .container:after {
  background-image: url('/homer/img/homer-crazy.png');
  height: 225px;
  width: 400px;
}
.bs-docs-footer.homer-thinking .container:after {
  background-image: url('/homer/img/homer-thinking.png');
}
.bs-docs-footer.homer-worried .container:after {
  background-image: url('/homer/img/homer-worried.png');
}
.bs-docs-footer.homer-doh .container:after {
  background-image: url('/homer/img/homer-doh.png');
}
.bs-docs-footer.homer-confused .container:after {
  background-image: url('/homer/img/homer-confused.png');
  bottom: -70px;
  height: 300px;
  width: 215px;
}
.bs-docs-footer.homer-fingering .container:after {
  background-image: url('/homer/img/homer-fingering.png');
}
.bs-docs-footer.homer-security .container:after {
  background-image: url('/homer/img/homer-security.png');
  width: 205px;
}
.bs-docs-footer.lisa-satisfied .container:after {
  background-image: url('/homer/img/lisa-satisfied.png');
}
.bs-docs-footer.marge-satisfied .container:after {
  background-image: url('/homer/img/marge-satisfied.png');
  height: 305px;
}
.bs-docs-footer.willie-angry .container:after {
  background-image: url('/homer/img/willie-angry.png');
  bottom: -52px;
}


@media (min-width: 768px) {
  .bs-docs-footer {
    text-align: left;
  }
  .bs-docs-footer p {
    margin-bottom: 0;
  }
}
/* ... */

